--- a/index.html
+++ b/index.html
@@ -252,9 +252,10 @@
                   <div class="h5">{{ tempProduct.price }} 元</div>
                   <div>
                     <div class="input-group">
-                      <input type="number" class="form-control"
-                             min="1">
-                      <button type="button" class="btn btn-primary" @click="addToCart(tempProduct.id)">加入購物車</button>
+                      <select name="" id="" class="form-select" v-model="qty">
+                        <option :value="i" v-for="i in 20" :key="`${i}12345`">{{ i }}</option>
+                      </select>
+                      <button type="button" class="btn btn-primary" @click="addToCart(tempProduct.id, qty)">加入購物車</button>
             </div>
             </div>
             </div>
