--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
                   </td>
                   <td>
                     <div class="input-group input-group-sm">
-                      <select name="" id="" v-model="item.qty">
+                      <select
+                        name=""
+                        id=""
+                        v-model="item.qty"
+                        @change="updateCartItem(item)"
+                      >
                         <option
                           :value="i"
                           v-for="i in 20"
