delete item in cart function

--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
               <template v-if="cart.carts">
                 <tr v-for="item in cart.carts" :key="item.id">
                   <td>
-                    <button type="button" class="btn btn-outline-danger btn-sm">
+                    <button
+                      type="button"
+                      class="btn btn-outline-danger btn-sm"
+                      @click="deleteItem(item)"
+                    >
                       <i class="fas fa-spinner fa-pulse"></i>
                       x
                     </button>
