--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
       integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
       crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3.4.3/dist/vue-loading.css"
+      rel="stylesheet"
     />
   </head>
 
@@ -70,7 +76,7 @@
                       class="btn btn-outline-secondary"
                       @click="openModal(product.id)"
                     >
-                      <i class="fas fa-spinner fa-pulse"></i>
+                      <!-- <i class="fas fa-spinner fa-pulse"></i> -->
                       查看更多
                     </button>
                     <button
@@ -78,7 +84,7 @@
                       class="btn btn-outline-danger"
                       @click="addToCart(product.id)"
                     >
-                      <i class="fas fa-spinner fa-pulse"></i>
+                      <!-- <i class="fas fa-spinner fa-pulse"></i> -->
                       加到購物車
                     </button>
                   </div>
@@ -88,7 +94,11 @@
           </table>
           <!-- 購物車列表 -->
           <div class="text-end">
-            <button class="btn btn-outline-danger" type="button">
+            <button
+              class="btn btn-outline-danger"
+              type="button"
+              @click.prevent="clearCart()"
+            >
               清空購物車
             </button>
           </div>
@@ -112,7 +122,7 @@
                       class="btn btn-outline-danger btn-sm"
                       @click="deleteItem(item)"
                     >
-                      <i class="fas fa-spinner fa-pulse"></i>
+                      <!-- <i class="fas fa-spinner fa-pulse"></i> -->
                       x
                     </button>
                   </td>
@@ -160,8 +170,13 @@
           </table>
         </div>
         <!-- 驗證列表 -->
-        <!-- <div class="my-5 row justify-content-center">
-          <v-form ref="form" class="col-md-6" v-slot="{ errors }">
+        <div class="my-5 row justify-content-center">
+          <v-form
+            ref="form"
+            class="col-md-6"
+            v-slot="{ errors }"
+            @submit="onSubmit"
+          >
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
               <v-field
@@ -171,6 +186,8 @@
                 class="form-control"
                 :class="{ 'is-invalid': errors['email'] }"
                 placeholder="請輸入 Email"
+                rules="email|required"
+                v-model="form.user.email"
               ></v-field>
               <error-message
                 name="email"
@@ -188,6 +205,7 @@
                 :class="{ 'is-invalid': errors['姓名'] }"
                 placeholder="請輸入姓名"
                 rules="required"
+                v-model="form.user.name"
               ></v-field>
               <error-message
                 name="姓名"
@@ -204,6 +222,8 @@
                 class="form-control"
                 :class="{ 'is-invalid': errors['電話'] }"
                 placeholder="請輸入電話"
+                rules="required|min:8|max:10"
+                v-model="form.user.tel"
               ></v-field>
               <error-message
                 name="電話"
@@ -221,6 +241,7 @@
                 :class="{ 'is-invalid': errors['地址'] }"
                 placeholder="請輸入地址"
                 rules="required"
+                v-model="form.user.address"
               ></v-field>
               <error-message
                 name="地址"
@@ -231,17 +252,19 @@
             <div class="mb-3">
               <label for="message" class="form-label">留言</label>
               <textarea
+                name=""
                 id="message"
                 class="form-control"
                 cols="30"
                 rows="10"
+                v-model="form.message"
               ></textarea>
             </div>
             <div class="text-end">
               <button type="submit" class="btn btn-danger">送出訂單</button>
             </div>
           </v-form>
-        </div> -->
+        </div>
       </div>
     </div>
     <script type="text/x-template" id="userProductModal">
@@ -283,25 +306,25 @@
             </div>
     </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js"
-      integrity="sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=="
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-      integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-      integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="https://unpkg.com/vue@next"></script>
     <script src="https://unpkg.com/vee-validate@next"></script>
     <script src="https://unpkg.com/@vee-validate/i18n@4.1.0"></script>
     <script src="https://unpkg.com/@vee-validate/rules"></script>
-    <script src="index.js" type="module"></script>
+
+    <!-- Lastly add this package -->
+    <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@6"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@6/dist/css/index.css"
+      rel="stylesheet"
+    />
+
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
